# ROSEFusion

./: .gitignore  CMakeLists.txt  README.md
controller_config/: controller.yaml  example_controller.yaml
dataset_config/: example_data.yaml
dataset_config/TUM RGBD/: fr2_desk.yaml
dataset_config/TUM_RGBD/: fr2_desk.yaml
include/: DataReader.h  data_types.h  rosefusion.h
src/: DataReader.cpp  main.cpp  main_realTime.cpp  pose_estimation.cpp  rosefusion.cpp  runTum.cpp  runZed.cpp  surface_measurement.cpp
src/cuda/: extract_pointcloud.cu  pose_estimation.cu  surface_measurement.cu  surface_prediction_phong_shading.cu  surface_reconstruction.cu
src/cuda/include/: common.h
